# xhup-qq-bot

./: Dockerfile  Pipfile  README.md  config.py  converter.py  demo.env  pyproject.toml  run.py
scripts/: deploy.sh  docker-compose.yml  run_coolq.sh  run_coolq_docker.sh  upgrade_and_restart_coolq.sh
xhup_bot/: __init__.py  command.py  plugin.py
xhup_bot/plugins/: __init__.py  common.py  query_char.py  verification.py  xhup.py
xhup_bot/xhup_club/: __init__.py  char.py
xhup_qq_bot/: common.py  plugin.py  xhup_club.py
xhup_qq_bot/plugins/: common.py  verification.py  xhup.py
