[tool.poetry]
name = "xhup-qq-bot"
version = "0.0.7"
description = ""
authors = ["ryan4yin <xiaoyin_c@qq.com>"]
license = "MIT"
repository = "https://github.com/coding-and-typing/xhup-qq-bot"

[[tool.poetry.source]]
name = "aliyun-pypi"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.7"
aiocqhttp = "^0.6.8"
aiodns = "^2.0.0"
cchardet = "^2.1.5"
websockets = "^9.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.10.3"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
